[DevTools] Fix css layout problem in help screen.
BUG=359473

Review URL: https://codereview.chromium.org/235003003

git-svn-id: svn://svn.chromium.org/blink/trunk@171345 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/helpScreen.css
+++ b/front_end/helpScreen.css
@@ -8,7 +8,6 @@
 }
 
 .help-window-main {
-    max-height: 100%;
     color: white;
     background-color: rgba(17, 17, 17, 0.85);
     display: -webkit-flex;
